@@ -17,6 +17,7 @@ R CMD SHLIB convolve5_cpp.cpp
 R CMD SHLIB convolve8_cpp.cpp
 R CMD SHLIB convolve9_cpp.cpp
 R CMD SHLIB convolve10_cpp.cpp
+R CMD SHLIB convolve11_cpp.cpp
 
 # call R so that we get an interactive session
 Rscript exampleRCode.r
